JDK19 updates for javadoc